# swara

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/swara/: __init__.py  cli.py  models.py  report.py
src/swara/composition/: __init__.py  jugalbandi.py  raga_engine.py  tala_engine.py
src/swara/instruments/: __init__.py  sitar.py  tabla.py  tanpura.py  veena.py
tests/: test_benchmark.py  test_cli.py  test_composition.py  test_core.py  test_instruments.py  test_integration.py  test_models.py
